2003-01-25  Steffen Macke <sdteffen@web.de>

	* plug-ins/xslt/xslt.h: don't use dlfcn.h on win32. XSLT
	plug-in still not working on win32
	
2003-01-24  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/disp_callbacks.c (ddisplay_canvas_events): Moved
	gdk_window_get_pointer to avoid destroy crash.  Simpler than I
	thought.

2003-01-23  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/app_procs.c (app_init): Run gtk_init before popt so we don't
	bail out on gtk options.

	* lib/message.c (gtk_message_internal): Better handling of destroy
	event.

2003-01-22  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/color_area.c (color_area_edit): 
	* lib/widgets.c (dia_file_selector_browse_pressed) 
	(dia_color_selector_pressed): 
	* app/plugin-manager.c (get_plugin_manager): 
	* app/filedlg.c (file_open_callback, file_save_as_callback) 
	(file_export_callback):
	* app/diagram_tree_window.c (diagram_tree_window_new): Correct
	handling of destroy event.

2003-01-22  Alan Horkan <horkana@tcd.ie>

	* app/commands.c (file_new_callback): Changed Untitled to Diagram
	for default name.

2003-01-21  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/preferences.c (prefs_create_dialog): 
	* app/linewidth_area.c (linewidth_create_dialog): 
	* app/lineprops_area.c (dia_arrow_chooser_dialog_show): 
	* app/layer_dialog.c (create_layer_dialog)
	(layer_dialog_edit_layer): Correct handling of destroy_event. 

	* app/diapsft2renderer.c (set_font): Adjust silly random factor
	for change in font.c

	* lib/widgets.c: Avoid warning when font menu file doesn't exist.

	* lib/font.c (dia_font_build_layout): Let's all use the same weird
	factor here.

	* app/lineprops_area.c (dia_arrow_chooser_dialog_show): 
	* app/layer_dialog.c (create_layer_dialog) 
	(layer_dialog_edit_layer): 
	* app/filedlg.c (file_open_callback, file_save_as_callback) 
	(file_export_callback): 
	* app/dia-props.c (create_diagram_properties_dialog): 
	* app/defaults.c (defaults_dialog_destroyed): 